# cdc_project

./: README.md  active_flow.pu  install.sh
Astar/: CMakeLists.txt
Astar/include/: douglas_peucker.h
Astar/src/: douglas_peucker.cpp  main.cpp
cdc_navigation/: CMakeLists.txt  package.xml
cdc_navigation/config/: amcl.yaml  ctrl_gains.yaml  ctrl_joint_state_publisher.yaml  dwa_param.yaml  mode1.yaml
cdc_navigation/launch/: PF1.launch  cdc_base.launch  gazebo_pf1.launch
cdc_navigation/map/: cdc_base.yaml
cdc_navigation/meshes/: Servo Motor.dae  base assembly.dae  pf1_body.stl  pf1_steer.stl  pf1_wheel.stl
cdc_navigation/rviz/: up04.rviz  up05.rviz
cdc_navigation/src/: navigation_controller.cpp  tf_to_pose_publisher.py
cdc_navigation/worlds/: cdc_base.world  pf1_base.world
cdc_navigation/xacro/: PF1_stl.xacro  pf1.xacro
depth_estimater/: CMakeLists.txt  package.xml
depth_estimater/src/: depth_estimater.py  depth_estimater2.py  test.py  test_bottle.py
dwa_planner/config/: dwa_param.yaml
dwa_planner/src/: dwa_planner.cpp
img_recog/: CMakeLists.txt  package.xml
img_recog/scripts/: color_img_recog.py  color_img_recog03.py
ken/: CMakeLists.txt  package.xml
ken/src/: test.py
kyolo/: CMakeLists.txt  package.xml
kyolo/src/: bbox.cpp  coke_detect2.py  kyolo_detection.py  kyolo_detection2.py  kyolo_smach.py  kyolo_topic.py  kyolo_waypoint.py  s_test.py  s_test2.py  smach_task.py  smach_test_pr2.py
lm_detection/: CMakeLists.txt  package.xml
lm_detection/msg/: Bounding_Box.msg  Bounding_Box_array.msg  Position.msg  Position_array.msg
lm_detection/src/: LM_detection.cpp  LM_tracking.cpp  optical_flow.cpp
middle_planner/: CMakeLists.txt  package.xml
middle_planner/src/: middle_plan.cpp
mighty_rover/: CMakeLists.txt  kidou01.csv  package.xml
mighty_rover/config/: ackermann_steering_controller.yaml  ctrl_ackermann_steering_controller.yaml  ctrl_steer_bot_hardware_gazebo.yaml  diff_drive.yaml  diff_drive_pf1.yaml  diff_drive_pf1_gazebo.yaml  dwa_param.yaml  find_object_2d.yaml  robot_param.yaml
mighty_rover/launch/: cdc_base.launch  diff_drive.launch  diff_drive_pf1.launch  explore.launch  gazebo.launch  gazebo_pf1.launch  mpc.launch  teleope.launch
mighty_rover/map/: cdc_base.pgm  chuo.pgm  chuo.yaml  map.pgm  map.yaml  road.pgm  road.yaml  world_map.pgm  world_map.yaml
ros_beginner/: CMakeLists.txt  package.xml
waypoint_generator/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
waypoint_generator/msg/: Waypoint.msg  Waypoint_array.msg
waypoint_generator/src/rviz/: waypoint_generate.cpp  waypoint_generate.h
(+235 files in other folders)
